# hangeul-id-cpp

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  vcpkg.json
src/: Hangeul.UnitTest.cpp  HangeulId.cpp  HangeulId.h
src/base/: convert_base.UnitTest.cpp  convert_base.cpp  convert_base.h
src/hangeul/: all_hangeul.UnitTest.cpp  all_hangeul.cpp  all_hangeul.h  ksx1001.UnitTest.cpp  ksx1001.cpp  ksx1001.h
